@@ -6,6 +6,7 @@ describe "/leads/destroy.js.rjs" do
   before(:each) do
     login_and_assign
     assigns[:lead] = @lead = Factory(:lead)
+    assigns[:lead_status_total] = { :contacted => 1, :converted => 1, :new => 1, :rejected => 1, :other => 1, :all => 5 }
   end
 
   it "should blind up destroyed lead partial" do
@@ -32,11 +33,15 @@ describe "/leads/destroy.js.rjs" do
     response.should have_rjs("paginate")
   end
 
-  it "should update recently viewed items when called from related asset" do
-    request.env["HTTP_REFERER"] = "http://localhost/campaigns/123"
+  it "should update related asset sidebar when called from related asset" do
+    assigns[:campaign] = campaign = Factory(:campaign)
+    request.env["HTTP_REFERER"] = "http://localhost/campaigns/#{campaign.id}"
     render "leads/destroy.js.rjs"
 
-    response.should have_rjs("recently")
+    response.should have_rjs("sidebar") do |rjs|
+      with_tag("div[class=panel][id=summary]")
+      with_tag("div[class=panel][id=recently]")
+    end
   end
 
 end
