@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Sat, Oct 31, 2009
 ---------------------------------------------------------------------
 - Correctly show opportunity summary when opportunity stage hasn't been specified.
+- Update Campaign summary information when creating or deleting related lead.
 
 Fri, Oct 30, 2009
 ---------------------------------------------------------------------
